modules/cabotage/manifests/network-policies/00-default-deny-builds.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: cabotage-tenant-builds
spec:
  podSelector: {}
  policyTypes:
    - Ingress
