modules/cabotage/manifests/network-policies/00-default-deny-redis.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: redis
spec:
  podSelector: {}
  policyTypes:
    - Ingress
