modules/cabotage/manifests/network-policies/00-default-deny-tailscale.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: tailscale
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
