modules/cabotage/manifests/network-policies/01-allow-alert-echo.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-alert-echo
  namespace: cabotage
spec:
  podSelector:
    matchLabels:
      app: alert-echo
  ingress:
    # Mimir alertmanager sends webhook notifications
    - from:
        - podSelector:
            matchLabels:
              app: resident-mimir
      ports:
        - port: 8090
          protocol: TCP
