modules/cabotage/manifests/network-policies/01-allow-barman-cloud-plugin.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-barman-cloud-plugin
  namespace: postgres
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: plugin-barman-cloud
      app.kubernetes.io/instance: plugin-barman-cloud
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: cloudnative-pg
      ports:
        - port: 9090
          protocol: TCP
