modules/cabotage/manifests/network-policies/01-allow-cnpg-webhook.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-cnpg-webhook
  namespace: postgres
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cloudnative-pg
  ingress:
    # Kubernetes API server calls the webhook for validation/mutation
    - ports:
        - port: 9443
          protocol: TCP
