modules/cabotage/manifests/network-policies/01-allow-mimir.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-mimir
  namespace: cabotage
spec:
  podSelector:
    matchLabels:
      app: resident-mimir
  ingress:
    # Metrics write from alloy, metrics read from cabotage-app
    - from:
        - podSelector:
            matchLabels:
              app: resident-alloy
        - podSelector:
            matchLabels:
              app: cabotage-app
      ports:
        - port: 8080
          protocol: TCP
    # Mimir internal: HTTP + gRPC + memberlist
    - from:
        - podSelector:
            matchLabels:
              app: resident-mimir
      ports:
        - port: 8080
          protocol: TCP
        - port: 9095
          protocol: TCP
        - port: 7946
          protocol: TCP
