modules/cabotage/manifests/network-policies/01-allow-seaweedfs.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-seaweedfs
  namespace: cabotage
spec:
  podSelector:
    matchLabels:
      app: seaweedfs
  ingress:
    # S3 API from registry, cabotage-app, loki, mimir
    - from:
        - podSelector:
            matchLabels:
              app: registry
        - podSelector:
            matchLabels:
              app: registry-garbage-collection
        - podSelector:
            matchLabels:
              app: resident-loki
        - podSelector:
            matchLabels:
              app: resident-mimir
        - podSelector:
            matchLabels:
              app: cabotage-app
      ports:
        - port: 9000
          protocol: TCP
    # Internal SeaweedFS communication (master, volume, filer)
    - from:
        - podSelector:
            matchLabels:
              app: seaweedfs
      ports:
        - port: 9333
          protocol: TCP
        - port: 19333
          protocol: TCP
        - port: 8080
          protocol: TCP
        - port: 18080
          protocol: TCP
        - port: 8888
          protocol: TCP
        - port: 18888
          protocol: TCP
